# yt-dlp-dl

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  README.md  README_WEBUI.md  app.py  cookies.txt  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  run.bat  run.py  session-ses_3f1f.md  yt-dlp UI Project Plan.md  yt-dlp_user_guide.md
services/: downloader.py
static/css/: style.css
static/js/: script.js
templates/: index.html
